# aegispq

./: README.md  pyproject.toml
aegispq/: cli.py  crypto.py  envelope.py  keys.py
tests/: README.md
